crates/vexor-compiler/tests/golden/error/output/move_arity.err
Error: evaluation error
   ╭─[ input:3:13 ]
   │
 3 │ val moved = move(50)(c)
   │             ────┬───  
   │                 ╰───── expected two arguments
───╯
